# qrop_qr

./: README.md
01_python_proto/: README.md  pyproject.toml
01_python_proto/jupyter_experimental_code/: qr_detect_opencv.ipynb  qr_detect_test.ipynb  qr_detection.ipynb
01_python_proto/src/: qr_perspective_demo.py
